Jenkinsfile: agent label

--- a/.ymkim/Jenkinsfile
+++ b/.ymkim/Jenkinsfile
@@ -1,5 +1,7 @@
 pipeline {
-    agent any
+    agent {
+        label: "moon_build_ubuntu || sun64"
+    }
     environment {
         GOOGLE_CHAT_TOKEN = credentials('google-chat-token-ymkim')
     }
