--- a/.ymkim/Jenkinsfile
+++ b/.ymkim/Jenkinsfile
@@ -68,7 +68,7 @@ pipeline {
             steps {
                 echo "Archiving artifacts..."
                 archiveArtifacts artifacts: '**/release/hello_world', fingerprint: true, name: 'host'
-                archiveArtifacts artifacts: "/tmp/${env.BUILD_TAG}/hello_world/**/x86_64-pc-windows-gnu/release/*.exe", fingerprint: true, name: 'x86_64-pc-windows-gnu'
+                archiveArtifacts artifacts: "/tmp/${env.BUILD_TAG}/hello_world/**/x86_64-pc-windows-gnu/release/*.exe", fingerprint: true
             }
         }
         stage('clean workdir') {
