Jenkinsfile: dbg artifacts

--- a/.ymkim/Jenkinsfile
+++ b/.ymkim/Jenkinsfile
@@ -28,6 +28,7 @@ pipeline {
                 sh """
                     mkdir -p /tmp/${env.BUILD_TAG}
                     cp -r . /tmp/${env.BUILD_TAG}
+                    mkdir -p output
                 """
             }
         }
@@ -37,7 +38,9 @@ pipeline {
                     cd /tmp/${env.BUILD_TAG}
                     cd hello_world
                     cross build --release --target x86_64-pc-windows-gnu
+                    cp -f target/x86_64-pc-windows-gnu/release/hello_world.exe ${env.WORKSPACE}/output
                     cross build --release --target i686-pc-windows-gnu
+                    cp -f target/i686-pc-windows-gnu/release/hello_world.exe ${env.WORKSPACE}/output
                 """
             }
         }
@@ -47,7 +50,9 @@ pipeline {
                     cd /tmp/${env.BUILD_TAG}
                     cd hello_world
                     cross build --release --target armv7-unknown-linux-gnueabihf
+                    cp -f target/armv7-unknown-linux-gnueabihf/release/hello_world ${env.WORKSPACE}/output
                     cross build --release --target aarch64-unknown-linux-gnu
+                    cp -f target/aarch64-unknown-linux-gnu/release/hello_world ${env.WORKSPACE}/output
                 """
             }
         }
@@ -57,7 +62,9 @@ pipeline {
                     cd /tmp/${env.BUILD_TAG}
                     cd hello_world
                     cross build --release --target i686-unknown-linux-gnu
+                    cp -f target/i686-unknown-linux-gnu/release/hello_world ${env.WORKSPACE}/output
                     cross build --release --target x86_64-unknown-linux-gnu
+                    cp -f target/x86_64-unknown-linux-gnu/release/hello_world ${env.WORKSPACE}/output
                 """
             }
         }
@@ -68,8 +75,7 @@ pipeline {
             steps {
                 echo "Archiving artifacts..."
                 archiveArtifacts artifacts: '**/release/hello_world', fingerprint: true
-                archiveArtifacts artifacts: "/tmp/${env.BUILD_TAG}/hello_world/target/x86_64-pc-windows-gnu/release/hello_world.exe", fingerprint: true
-                archiveArtifacts artifacts: "/tmp/${env.BUILD_TAG}/hello_world/target/i686-pc-windows-gnu/release/hello_world.exe", fingerprint: true
+                archiveArtifacts artifacts: '**/output/*', fingerprint: true
             }
         }
         stage('clean workdir') {
