--- a/.ymkim/Jenkinsfile
+++ b/.ymkim/Jenkinsfile
@@ -68,8 +68,12 @@ pipeline {
             steps {
                 echo "Archiving artifacts..."
                 sh """
+                    if [ -d output ]; then
+                        rm -rf output
+                    fi
                     mkdir -p output && mkdir -p output/x86_64-pc-windows-gnu && mkdir -p output/i686-pc-windows-gnu && mkdir -p output/armv7-unknown-linux-gnueabihf && mkdir -p output/aarch64-unknown-linux-gnu && mkdir -p output/i686-unknown-linux-gnu && mkdir -p output/x86_64-unknown-linux-gnu
 
+                    cp -f hello_world/target/release/hello_world ./output/
                     cp -f /tmp/${env.BUILD_TAG}/hello_world/target/x86_64-pc-windows-gnu/release/hello_world.exe ./output/x86_64-pc-windows-gnu/
                     cp -f /tmp/${env.BUILD_TAG}/hello_world/target/i686-pc-windows-gnu/release/hello_world.exe ./output/i686-pc-windows-gnu/
                     cp -f /tmp/${env.BUILD_TAG}/hello_world/target/armv7-unknown-linux-gnueabihf/release/hello_world ./output/armv7-unknown-linux-gnueabihf/
@@ -77,7 +81,6 @@ pipeline {
                     cp -f /tmp/${env.BUILD_TAG}/hello_world/target/i686-unknown-linux-gnu/release/hello_world ./output/i686-unknown-linux-gnu/
                     cp -f /tmp/${env.BUILD_TAG}/hello_world/target/x86_64-unknown-linux-gnu/release/hello_world ./output/x86_64-unknown-linux-gnu/
                 """
-                archiveArtifacts artifacts: '**/release/hello_world', fingerprint: true
                 archiveArtifacts artifacts: '**/output/**', fingerprint: true
             }
         }
